--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
     "name": "xshifty/cashmachine",
     "require": {
         "php": ">=7.0",
-        "slim/slim": "^3.8",
-        "pimple/pimple": "^3.2"
+        "slim/slim": "^3.8"
     },
     "require-dev": {
         "phpunit/phpunit": "^6"
