--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "xshifty/cashmachine",
     "require": {
         "php": ">=7.0",
-        "slim/slim": "^3.8"
+        "slim/slim": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^6"
@@ -15,9 +15,17 @@
     ],
     "autoload": {
         "psr-4": {
-            "Xshifty\\CashMachine\\Domain\\": "src",
-            "Xshifty\\CashMachine\\App\\": "app",
-            "Xshifty\\CashMachine\\Test\\": "test"
+            "Xshifty\\CashMachine\\": "CashMachineBackend/src",
+            "Xshifty\\CashMachineAPI\\": "CashMachineAPI/src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Xshifty\\CashMachine\\Test\\": "CashMachineBackend/test"
+        }
+    },
+    "scripts": {
+        "run": "php -S localhost:9000 -t CashMachineAPI/public",
+        "test": "vendor/bin/phpunit --bootstrap vendor/autoload.php CashMachineBackend/test"
     }
 }
